@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.5rc2
 
-	- Documentation updates (STR #365, STR #399)
+	- Documentation updates (STR #365, STR #399, STR #412)
+	- The first menu item in a list would not go invisible 
+	  (STR #406)
 	- Fl_Text_Buffer::replace() now range checks its input
 	  (STR #385)
 	- FLTK now builds with the current release of MinGW (STR
